# NodeGraphQt

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  NodeGraphQtPy  README.md  bash.exe.stackdump  basic_example.py  example.nodes  example.py  example_auto_nodes.py  example_math_nodes.py  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ngqt
.github/workflows/: pypi_publish.yml  sphinx_doc_build.yml  tests.yml
.reuse/: dep5
BlueprintNodeGraph/: __init__.py  constants.py  graph.py  helpers.py  interface.py  node.py  pipe.py  port.py  scene.py  viewer.py  widgets.py
BlueprintNodeGraph/interfaces/: __init__.py  graph.py  node.py  port.py
BlueprintNodeGraph/nodes/: __init__.py  bar.py  foo.py  foo_node.py  widget_nodes.py
BlueprintNodeGraph/plugins/: node_plugin.py  port_plugin.py
BlueprintNodeGraph/src/: constants.py  helpers.py  node.py  node_types.py  node_widgets.py  pipe.py  port.py  scene.py  serializer.py  viewer.py  widgets.py
BlueprintNodeGraph/utils/: node_utils.py  serializer.py
BlueprintNodeGraph/widgets/: constants.py  item_widgets.py  node.py  port.py  viewer.py
LICENSES/: MIT.txt
NodeGraphQt/: __init__.py  constants.py  errors.py  example.py  example_n.py  pkg_info.py
NodeGraphQt/NodeGraphQt/: __init__.py  constants.py  errors.py  pkg_info.py
NodeGraphQt/base/: __init__.py  actions.py  commands.py  factory.py  graph.py  graph_actions.py  menu.py  menu_setup.py  model.py  node.py  node_manager.py  node_plugin.py  node_utils.py  node_vendor.py  port.py  port_plugin.py  serializer.py  utils.py  vendor.py
NodeGraphQt/custom_widgets/: nodes_palette.py  nodes_tree.py  properties.py  properties_bin.py
NodeGraphQt/example_nodes/: widget_nodes.py
NodeGraphQt/interfaces/: __init__.py  graph.py  node.py  port.py
NodeGraphQt/items/: node_backdrop.py  node_base.py  pipe.py
NodeGraphQt/node_qgraphics/: node_base.py  node_graphics_item.py  port_graphics_item.py
NodeGraphQt/nodes/: backdrop_node.py  bar.py  base_node.py  base_node_circle.py  base_node_svg.py  foo.py  group_node.py  menu_node.py  port_node.py  simple_nodes.py  text_input_node.py  widget_nodes.py
NodeGraphQt/qgraphics/: node_abstract.py  node_backdrop.py  node_base.py  node_circle.py  node_group.py  node_group_port.py  node_overlay_disabled.py  node_port_in.py  node_port_out.py  node_svg.py  node_text_item.py  pipe.py  port.py  slicer.py  text_item.py
NodeGraphQt/tests/: test_examples.py
NodeGraphQt/widgets/: actions.py  commands.py  constants.py  dialogs.py  file_dialog.py  graphics_widgets.py  node.py  node_abstract.py  node_backdrop.py  node_base.py  node_graph.py  node_list.py  node_property.py  node_publish_widget.py  node_skeleton.py  node_space_bar.py  node_tree.py  node_widgets.py  nodes_list.py  nodes_palette.py  nodes_tree.py  pipe.py  port.py  properties.py  properties_bin.py  scene.py  stylesheet.py  tab_search.py  viewer.py  viewer_actions.py  viewer_nav.py
api/: .buildinfo  constants.html  custom_widgets.html  genindex.html  graph.html  index.html  menu.html  node_widgets.html  objects.inv  port.html  py-modindex.html  search.html  searchindex.js
api/.doctrees/: constants.doctree  graph.doctree  (+5 more)
bpNodeGraph/: __init__.py
dev/: convert_qt_wrapper.py
docs/: Makefile  classes.rst  conf.py  constants.rst  custom_widgets.rst  graph.rst  index.rst  make.bat  menu.rst  node_widgets.rst  nodes.rst  overview.rst  port.rst  widgets.rst
example_auto_nodes/: __init__.py  basic_nodes.py  data_node.py  input_nodes.py  logic_nodes.py  math_node.py  module_nodes.py  subgraph_nodes.py  viewer_nodes.py  widget_nodes.py
example_nodes/: __init__.py  basic_nodes.py  input_nodes.py  logic_nodes.py  math_node.py  menu_node.py  simple_nodes.py  text_input_node.py  util_nodes.py  viewer_nodes.py  widget_nodes.py
examples/: Using NodeGraphQt with QtDesigner.md  __init__.py  basic_example.py  widget_nodes.py
utils/: convert_to_qtpy.py
(+306 files in other folders)
