[metadata]
name = NodeGraphQt
version=attr: NodeGraphQt.pkg_info.__version__
author=Johnny Chan
license = MIT License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
description = Node graph framework for PySide2/PyQt5/Pyside6/PyQt6 that can be
              implemented and re-purposed into applications.
classifiers = Operating System :: OS Independent
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.8
url = https://github.com/jchanvfx/NodeGraphQt
project_urls = 
    Documentation = https://jchanvfx.github.io/NodeGraphQt/api/index.html
    Source = https://github.com/jchanvfx/NodeGraphQt/
    Tracker = https://github.com/jchanvfx/NodeGraphQt/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt

[options.extras_require]
tests =
    pytest
    pytest-qt

[options.packages.find]
exclude = examples

[options.package_data]
NodeGraphQt = widgets/icons/node_base.png
