[metadata]
name = NodeGraphQt
version=attr: NodeGraphQt.pkg_info.__version__
author=Johnny Chan
license = MIT License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
description = Node graph framework written in PySide2 that can be re-implemented.
classifiers = Operating System :: OS Independent
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.6
url = https://github.com/jchanvfx/NodeGraphQt
project_urls = 
    Documentation = https://jchanvfx.github.io/NodeGraphQt/api/index.html
    Source = https://github.com/jchanvfx/NodeGraphQt/
    Tracker = https://github.com/jchanvfx/NodeGraphQt/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    Qt.py>=1.4.1

[options.packages.find]
exclude = examples

[options.package_data]
NodeGraphQt = widgets/icons/node_base.png
